--- a/demo-web-new/.settings/org.eclipse.wst.common.component
+++ b/demo-web-new/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,9 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <dependent-module archiveName="demo-common-case-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/demo-common-case/demo-common-case">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="demo-web-new"/>
         <property name="java-output-path" value="/demo-web-new/target/classes"/>
         <property name="component.exclusion.patterns" value="WEB-INF\lib\jsp-api-2.3.jar,WEB-INF\lib\servlet-api-3.1.jar"/>
